[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/EnemySpawnPosition2D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/EnemySpawner1.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true

[node name="Position2D" type="Position2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="EnemySpawner1" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="Spawned" from="EnemySpawner1" to="." method="_on_EnemySpawner1_Spawned"]
